--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,12 @@
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
     <string name="app_widget_description">This is an app widget description</string>
+    <string name="select_condition">SELECT CONDITION</string>
+    <string-array name="conditionarr">
+        <item>SELECT CONDITION</item>
+        <item>NEW</item>
+        <item>GOOD</item>
+        <item>USED</item>
+        <item>POOR</item>
+    </string-array>
 </resources>
